--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
     <h2>Hello guyss.</h2>
     <p>I'm Vasanth a Web Designer from Madurai,i'm a Engineering student specialized in Information Technology and this is my first and my personal website .
-      <a class="moreinfo" href="Aboutme.html">for more Information..</a></p>
+      <a class="moreinfo" href="about.html">for more Information..</a></p>
   </div>
 </div>
   <hr>
