--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img class="devimage" src="image/developer.png" alt="">
   <h1>I'm Vasanth</h1>
 
-<p class="p">A Web Designer.</p>
+<p class="p">A Programmer.</p>
 </div>
     </div>
 <div class="middle-container">
