--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <img class="myimage" src="image/myimage.png" alt="">
     
     <h2>Hello guyss.</h2>
-    <p>I'm Vasanth a Web Designer from Madurai,i'm a Engineering student specialized in Information Technology and this is my first and my personal website .
+    <p>I'm Vasanth a JAVA Developer and Web Designer from Madurai,i'm a Engineering student specialized in Information Technology and this is my first and my personal website by using (HTML,CSS).
       <a class="moreinfo" href="about.html">for more Information..</a></p>
   </div>
 </div>
