--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <img class="myimage" src="image/myimage.png" alt="">
     
     <h2>Hello guyss.</h2>
-    <p>I'm Vasanth a JAVA Developer and Web Designer from Madurai,i'm a Engineering student specialized in Information Technology and this is my first and my personal website by using (HTML,CSS).
+    <p>I'm Vasanth a JAVA Developer and Web Designer from Madurai,i'm a Engineering student specialized in Information Technology and this is my first and my personal website created by using only (HTML,CSS).
       <a class="moreinfo" href="about.html">for more Information..</a></p>
   </div>
 </div>
@@ -44,7 +44,7 @@
     <div class="skill-row">
       <img class="skillimg" src="image/gif.gif" alt="">
       <h3>Programming</h3>
-      <p>HTML <BR>CSS <BR>Bootstrap <br>JavaScript <br> JAVA <br> MySQL</BR></BR>
+      <p>HTML <BR>CSS <BR>Bootstrap <br>ReactJS <br> JAVA and J2EE <br> MySQL and OracleSQL</BR></BR>
       </HTML></p>
     </div>
     <div class="skill-row">
