--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
     
     <h2>Hello guyss.</h2>
     <p>I'm Vasanth a JAVA Developer and Web Designer from Madurai,i'm a Engineering student specialized in Information Technology and this is my first and my personal website created by using only (HTML,CSS).
-      <a class="moreinfo" href="about.html">for more Information..</a></p>
   </div>
 </div>
   <hr>
@@ -50,7 +49,7 @@
     <div class="skill-row">
       <img class="proimg" src="image/programming.png" alt="">
       <h3>Software</h3>
-      <p>Visual Studio Code <br>Eclipse<br>HeidiSQL<br>Xampp <br>Intellji</p>
+      <p>Visual Studio Code<br>Eclipse<br>OracelSQL<br>SoapUI<br>Intellji</p>
     </div>
   </div>
 </div>
